# polymer-claims

./: .gitignore  ARC2-KICKOFF.md  ARCHITECTURE_CURRENT.md  EXPLAINER.md  GLOSSARY.md  MAP.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  evaluate.yml
artifacts/: snv_senseability_ledger.json
corpus/: .gitignore  README.md
corpus/contributors/: beldez01.yml
corpus/tiers/: policies.yml
data/: build_cbf_contracts.py
data/demo/: benchmark_advantage_fixture.json  build_frustrated_cycle.py  frustrated_cycle_corpus.json  immuno_universe.json  polymergenomics_universe.json  (+3 more)
docs/: actionability-and-roi.md  epistemic-core-derivation.typ  epistemology.md  open-questions-research-plan.typ  pitch-competitive-landscape-and-loop.md  polymer-claims-overview.md  prior-art-and-novelty.typ  roadmap-cross-domain-ecosystems.md  scaled-infrastructure.md  spectral-layout-how-it-works.md  spectral-layout-how-to-use.md  spectral-layout.md  the-spine-one-pager.typ  the-theory-of-polymer-claims.md
docs/superpowers/: BACKLOG.md  (+11 more)
evalue-claim-graph/: README.md  fix-edge-kind-refund.md  formal-core.md  refund-validity.md
formalclaim/: .gitignore  FormalClaim_Domain_Ontology_Note.md  README.md
grammar/: README.md  pyproject.toml
grammar/scripts/: probe_v12_ingest.py  reingest_v12.py
grammar/src/polymer_grammar/: __init__.py  base.py  blame.py  capability.py  claim.py  commitment.py  defeat.py  description_length.py  equivalence.py  evaluate.py  evidence_policy.py  executor_credential.py  fdr.py  governance.py  leaf.py  licensing.py  morphospace.py  operations.py  oracle.py  pattern.py  proposition.py  provenance.py  relation.py  representation.py  revision.py  roles.py  sampling.py  shared_cause.py  status.py  strength.py  subject.py  units.py  verification_policy.py
grammar/tests/: conftest.py  test_analytic_basis.py  test_blame.py  test_capability_descriptors.py  test_capability_functions.py  test_capability_purity.py  test_claim.py  test_claim_conclusion.py  test_claim_evaluation_plan.py  test_claim_licensing.py  test_claim_provenance_governance.py  test_claim_representation.py  test_claim_roles.py  test_claim_set_subject.py  test_claim_subject.py  test_commitment.py  test_compat_licensing.py  test_defeat.py  test_description_length.py  test_equivalence.py  test_evaluate.py  test_evidence_policy.py  test_executor_credential.py  test_fdr.py  test_fdr_registration.py  test_governance.py  test_immutability.py  test_independence_byte_identical.py  test_independence_overlap.py  test_independence_tier.py  test_isolation.py  test_leaf.py  test_leaf_bounds.py  test_leaf_context.py  test_leaf_dimension.py  test_licensing.py  test_licensing_evidence_route.py  test_materialization_ces.py  test_morphospace.py  test_operations.py  (+22 more)
protocol/: pyproject.toml
protocol/src/polymer_protocol/: __init__.py  adapter_registry.py  allocate.py  base.py  belief.py  blame_bridge.py  calibration.py  canonicalize.py  commit.py  corpus.py  cost.py  cycle.py  drift.py  duhem_fold.py  earned_strength.py  economics.py  evidence_executor.py  execute.py  generate.py  generation_adapter.py  integrate.py  ledger.py  oracle.py  oracle_validation.py  plan_synthesis.py  proposers.py  red_team.py  register.py  represent.py  residue.py  safety.py  select.py  sheaf.py  stakes.py  timeline.py  topology.py  verify.py
protocol/tests/: _calib_fixtures.py  conftest.py  helpers_select.py  helpers_verify.py  test_adapter_credential_lineage.py  test_adapter_independence_gate.py  test_adapter_registry.py  test_agreement_mode_capability_id.py  test_allocate.py  test_anchored_resolutions.py  test_belief.py  test_blame_bridge.py  test_calibration_record.py  test_calibration_resolvability.py  test_calibration_summary.py  test_canonicalize.py  test_commit.py  test_corpus.py  test_cost.py  test_cycle.py  test_drift.py  test_duhem_fold.py  test_earned_strength.py  test_economics.py  test_elond_fdr_control.py  test_evidence_dispatch.py  test_evidence_executor_types.py  test_execute.py  test_execute_materializations.py  test_frustrated_vertices.py  test_frustration_obstructions.py  test_generate.py  test_generation_adapter.py  test_integrate.py  test_isolation.py  test_ledger.py  test_oracle.py  test_oracle_validation.py  test_permitted_by_bar_exemption.py  test_placeholder_operator_id.py  (+33 more)
scripts/: bootstrap_real_kernel_pins.py  build_and_test_install.sh  capture_capability_goldens.py  check-all.sh  check_te_background_enrichment.py  check_te_permutation_null.py  import_formal_claim_ir.py  rip_hervk_ndmp.py  rip_immuno_meth.py  rip_mhc_ndmp.py  rip_te_campaign.py  rip_te_enrichment.py  rip_te_families_ndmp.py  sync_schema.sh
tests/: conftest.py  test_2e_tiered_independence_e2e.py  test_accumulating_store.py  test_adapter_independence.py  test_adapter_independence_data.py  test_analysis_profile.py  test_assets.py  test_attested_certificate.py  test_attested_ingest.py  test_background_enrichment.py  test_build_loyfer_contract.py  test_bundle.py  test_calibration_harness_gen.py  test_calibration_harness_run.py  test_calibration_stats.py  test_calibration_store.py  test_candidate_gen.py  test_casectrl_fixture.py  test_certificate.py  test_certificate_render.py  test_ces3_content_address_e2e.py  test_claim_detail.py  test_clear_contract_cache.py  test_cli.py  test_cli_calibration.py  test_cli_ingest.py  test_cli_ingest_attested.py  test_cli_serve_calibration.py  test_cli_signing.py  test_cli_transparency.py  test_cli_verify_kernel.py  test_cli_verify_kernel_real.py  test_contract_root.py  test_contracts_fixture.py  test_contracts_loader.py  test_count_enrichment_evalue.py  test_earned_strength_live.py  test_embedding.py  test_embedding_graph.py  test_embedding_signed.py  (+76 more)
v1.2/: README.md
v1.2/corpus/evaluator/: pyproject.toml  run_evaluator.py
v1.2/formalclaim/: README.md  pyproject.toml
v1.2/formalclaim/src/polymer_formalclaim/: cli.py  evaluate.py  materialize.py  mcp_server.py  nanopub.py  schema.py
viewer/: next.config.ts  package-lock.json  package.json
(+785 files in other folders)
