[project]
name = "polymer-claims"
version = "0.1.0"
description = "Polymer Claims — the grammar + runtime for a local knowledge-generation node."
requires-python = ">=3.12"
dependencies = ["polymer-protocol", "polymer-grammar", "pydantic>=2.6"]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn>=0.27", "sse-starlette>=2"]

[project.scripts]
polymer-claims = "polymer_claims.cli:main"

[tool.uv.sources]
polymer-grammar = { path = "grammar", editable = true }
polymer-protocol = { path = "protocol", editable = true }

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "fastapi>=0.110", "uvicorn>=0.27", "sse-starlette>=2", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymer_claims"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
