[project]
name = "polymer-protocol"
version = "0.1.0"
description = "Polymer Claims protocol runtime — the assessment spine over polymer_grammar."
requires-python = ">=3.12"
dependencies = ["polymer-grammar", "pydantic>=2.6"]

[tool.uv.sources]
polymer-grammar = { path = "../grammar", editable = true }

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymer_protocol"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
