[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "polymer-formalclaim"
version = "0.2.0"
description = "FormalClaim IR (v1.2) — pydantic models, evaluator, materialization dispatcher, Nanopublications projection, and MCP server for the Polymer Claims agent-scientist harness."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Zachary Belden", email = "zbelden1@gmail.com" }]
keywords = [
    "biomedical",
    "formal-claim",
    "scientific-claims",
    "nanopublications",
    "ga4gh",
    "evaluator",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "pyright>=1.1"]

[project.scripts]
polymer-formalclaim = "polymer_formalclaim.cli:main"
polymer-formalclaim-mcp = "polymer_formalclaim.mcp_server:main"

[project.urls]
Homepage = "https://polymerbio.org"
Repository = "https://github.com/beldez01/polymer-claims"
Issues = "https://github.com/beldez01/polymer-claims/issues"
Corpus = "https://github.com/beldez01/polymer-claims/tree/main/corpus"
Marketplace = "https://github.com/beldez01/polymer-claims/tree/main/plugins/claim-harness"

[tool.hatch.build.targets.wheel]
packages = ["src/polymer_formalclaim"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
