[project]
name = "polymer-claims-evaluator"
version = "0.1.0"
description = "CI evaluator wrapper for the beldez01/polymer-claims corpus."
requires-python = ">=3.12"
dependencies = [
    "polymer-formalclaim",
    "pydantic>=2.7",
]

[tool.uv.sources]
# Resolve the IR package from the sibling subdir in this monorepo.
polymer-formalclaim = { path = "../../formalclaim" }
